AV-1181: Bug squish

--- a/modules/ytp-assets-common/src/less/components/forms.less
+++ b/modules/ytp-assets-common/src/less/components/forms.less
@@ -564,7 +564,7 @@ label.control-label {
   @suomifi-button-secondary-noborder();
 }
 
-div.multiple-values ~ button.suomifi-button-secondary {
+.add-input-button {
   margin-top: 20px;
 }
 
